@@ -26,7 +26,7 @@ public class E14Resource {
 
 	@GET
 	public DataResponse<E14> get(@Context UriInfo uriInfo) {
-		return LinkRest.select(E14.class, config).listener(new P7Listener()).uri(uriInfo).select();
+		return LinkRest.select(E14.class, config).listener(new P7Listener()).uri(uriInfo).get();
 	}
 
 	@POST
