@@ -24,7 +24,7 @@ public class E19Resource {
     @GET
     @Path("{id}")
 	public DataResponse<E19> getById(@Context UriInfo uriInfo, @PathParam("id") Integer id) {
-		return LinkRest.select(E19.class, config).uri(uriInfo).byId(id).selectOne();
+		return LinkRest.select(E19.class, config).uri(uriInfo).byId(id).getOne();
 	}
 
 	@POST
